<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="XTS_PRG" Id="{90aa3146-f864-4cbb-9295-77e7c98b9d01}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM XTS_PRG
VAR
	fbXTSSystem : XTS_System;
	bInit		: BOOL := FALSE;
	i			: UDINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bInit = FALSE THEN
		
		fbXTSSystem.stCfg.udiMoverMode							:= 1; //Single
		fbXTSSystem.stCfg.bInvertPolarity						:= FALSE;

		fbXTSSystem.stCfg.udiNumStations						:= 3;
		fbXTSSystem.stCfg.stStationsCfg[1].sName			 	:= 'Station 1'; 
		fbXTSSystem.stCfg.stStationsCfg[1].lrStartPosition 		:= 0.0; 
		fbXTSSystem.stCfg.stStationsCfg[1].lrEndPosition	 	:= 500.0; 
		fbXTSSystem.stCfg.stStationsCfg[1].lrStopPosition[1] 	:= 100.0; 
		fbXTSSystem.stCfg.stStationsCfg[1].lrStopPosition[2] 	:= 450.0; 
		fbXTSSystem.stCfg.stStationsCfg[1].lrProcessingTime 	:= 1.0;
		fbXTSSystem.stCfg.stStationsCfg[1].uiNumStopPositions 	:= 1;
		fbXTSSystem.stCfg.stStationsCfg[1].lrTravelTime			:= 0.5;				

		fbXTSSystem.stCfg.stStationsCfg[2].sName			 	:= 'Station 2'; 		
		fbXTSSystem.stCfg.stStationsCfg[2].lrStartPosition 		:= 1000.0; 
		fbXTSSystem.stCfg.stStationsCfg[2].lrEndPosition	 	:= 1500.0;
		fbXTSSystem.stCfg.stStationsCfg[2].lrStopPosition[1]	:= 10.0; 
		fbXTSSystem.stCfg.stStationsCfg[2].lrStopPosition[2]	:= 250.0; 
		fbXTSSystem.stCfg.stStationsCfg[2].lrStopPosition[3]	:= 500.0; 
		fbXTSSystem.stCfg.stStationsCfg[2].lrProcessingTime 	:= 3.0;
		fbXTSSystem.stCfg.stStationsCfg[2].uiNumStopPositions 	:= 3;
		fbXTSSystem.stCfg.stStationsCfg[2].lrTravelTime			:= 0.5;				

 		fbXTSSystem.stCfg.stStationsCfg[3].sName			 	:= 'Station 3';  
		fbXTSSystem.stCfg.stStationsCfg[3].lrStartPosition 		:= 2000.0; 
		fbXTSSystem.stCfg.stStationsCfg[3].lrEndPosition	 	:= 2500.0;
		fbXTSSystem.stCfg.stStationsCfg[3].lrStopPosition[1] 	:= 100.0; 
		fbXTSSystem.stCfg.stStationsCfg[3].lrProcessingTime 	:= 1.0;
		fbXTSSystem.stCfg.stStationsCfg[3].uiNumStopPositions 	:= 1;
		fbXTSSystem.stCfg.stStationsCfg[3].lrTravelTime			:= 0.5;				

		fbXTSSystem.stCfg.stStationsCfg[4].sName			 	:= 'Station 4'; 	
		fbXTSSystem.stCfg.stStationsCfg[4].lrStartPosition 		:= 3000.0; 
		fbXTSSystem.stCfg.stStationsCfg[4].lrEndPosition	 	:= 3500.0;
		fbXTSSystem.stCfg.stStationsCfg[4].lrStopPosition[1] 	:= 200.0; 
		fbXTSSystem.stCfg.stStationsCfg[4].lrProcessingTime 	:= 1.0;
		fbXTSSystem.stCfg.stStationsCfg[4].uiNumStopPositions 	:= 1;
		fbXTSSystem.stCfg.stStationsCfg[4].lrTravelTime			:= 0.5;				

		fbXTSSystem.stCfg.stStationsCfg[5].sName			 	:= 'Station 5'; 
		fbXTSSystem.stCfg.stStationsCfg[5].lrStartPosition 		:= 4000.0; 
		fbXTSSystem.stCfg.stStationsCfg[5].lrEndPosition	 	:= 4500.0;
		fbXTSSystem.stCfg.stStationsCfg[5].lrStopPosition[1] 	:= 300.0; 
		fbXTSSystem.stCfg.stStationsCfg[5].lrProcessingTime 	:= 1.0;
		fbXTSSystem.stCfg.stStationsCfg[5].uiNumStopPositions 	:= 1;
		fbXTSSystem.stCfg.stStationsCfg[5].lrTravelTime			:= 0.5;				

		fbXTSSystem.stCfg.stStationsCfg[6].sName			 	:= 'Station 6'; 
		fbXTSSystem.stCfg.stStationsCfg[6].lrStartPosition 		:= 5000.0; 
		fbXTSSystem.stCfg.stStationsCfg[6].lrEndPosition	 	:= 5500.0;
		fbXTSSystem.stCfg.stStationsCfg[6].lrStopPosition[1] 	:= 25.0; 
		fbXTSSystem.stCfg.stStationsCfg[6].lrStopPosition[2] 	:= 325.0; 
		fbXTSSystem.stCfg.stStationsCfg[6].lrStopPosition[3] 	:= 500.0; 
		fbXTSSystem.stCfg.stStationsCfg[6].lrProcessingTime 	:= 3.0;
		fbXTSSystem.stCfg.stStationsCfg[6].uiNumStopPositions 	:= 2;
		fbXTSSystem.stCfg.stStationsCfg[6].lrTravelTime			:= 0.5;				

		fbXTSSystem.stCfg.stStationsCfg[7].sName			 	:= 'Station 7'; 
		fbXTSSystem.stCfg.stStationsCfg[7].lrStartPosition 		:= 6000.0; 
		fbXTSSystem.stCfg.stStationsCfg[7].lrEndPosition	 	:= 8500.0;	
		fbXTSSystem.stCfg.stStationsCfg[7].lrStopPosition[1] 	:= 10.0; 
		fbXTSSystem.stCfg.stStationsCfg[7].lrStopPosition[2] 	:= 650.0;
		fbXTSSystem.stCfg.stStationsCfg[7].lrStopPosition[3] 	:= 1200.0;
		fbXTSSystem.stCfg.stStationsCfg[7].lrProcessingTime 	:= 3.0;
		fbXTSSystem.stCfg.stStationsCfg[7].uiNumStopPositions 	:= 3;
		fbXTSSystem.stCfg.stStationsCfg[7].lrTravelTime			:= 0.5;
		
		fbXTSSystem.bEnable := TRUE;
		
		FOR i:=1 TO fbXTSSystem.stCfg.udiNumStations DO
			fbXTSSystem.stCfg.stStationsCfg[i].bEnableManualAck	:= FALSE;
		END_FOR

		bInit := TRUE;				
END_IF
fbXTSSystem.cyclic();
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>